--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = sahara_plugin_vanilla
+name = sahara-plugin-vanilla
 summary = Vanilla Plugin for Sahara Project
 description-file = README.rst
 license = Apache Software License
@@ -9,6 +9,7 @@ classifiers =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
     Environment :: OpenStack
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
@@ -34,6 +35,20 @@ all_files = 1
 build-dir = doc/build
 source-dir = doc/source
 warning-is-error = 1
+
+[compile_catalog]
+directory = sahara_plugin_vanilla/locale
+domain = sahara_plugin_vanilla
+
+[update_catalog]
+domain = sahara_plugin_vanilla
+output_dir = sahara_plugin_vanilla/locale
+input_file = sahara_plugin_vanilla/locale/sahara_plugin_vanilla.pot
+
+[extract_messages]
+keywords = _ gettext ngettext l_ lazy_gettext
+mapping_file = babel.cfg
+output_file = sahara_plugin_vanilla/locale/sahara_plugin_vanilla.pot
 
 [wheel]
 universal = 1
