--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,11 @@ name = sahara-plugin-vanilla
 summary = Vanilla Plugin for Sahara Project
 description-file = README.rst
 license = Apache Software License
+python-requires = >=3.6
 classifiers =
     Programming Language :: Python
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
@@ -17,9 +20,6 @@ author = OpenStack
 author-email = openstack-discuss@lists.openstack.org
 home-page = https://docs.openstack.org/sahara/latest/
 
-[global]
-setup-hooks = pbr.hooks.setup_hook
-
 [files]
 packages =
     sahara_plugin_vanilla
@@ -27,12 +27,6 @@ packages =
 [entry_points]
 sahara.cluster.plugins =
     vanilla = sahara_plugin_vanilla.plugins.vanilla.plugin:VanillaProvider
-
-[build_sphinx]
-all_files = 1
-build-dir = doc/build
-source-dir = doc/source
-warning-is-error = 1
 
 [compile_catalog]
 directory = sahara_plugin_vanilla/locale
@@ -47,6 +41,3 @@ input_file = sahara_plugin_vanilla/locale/sahara_plugin_vanilla.pot
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = sahara_plugin_vanilla/locale/sahara_plugin_vanilla.pot
-
-[wheel]
-universal = 1
